[package]
name = "weed-os"
version = "0.1.0"
authors = ["morimolymoly <morimolymoly@gmail.com>"]
edition = "2018"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies]
bootloader = "0.6.4"
volatile = "0.2.3"
spin = "0.4.9"

[package.metadata.bootimage]
default-target = "x86_64-weed.json"

[package.metadata.bootloader.target]
default-target = "x86_64-weed.json"


